load default list of screens when empty
