# src/api/db/indexDB.ts
@@ -1,12 +1,12 @@
 import localforage from 'localforage'
-import { ScreenInput, ScreenItem } from '../../generated/openapi/models'
+import { ScreenInput, ScreenInputList, ScreenItem } from '../../generated/openapi/models'
 import { transformScreenInput } from '../../utils/ScreenTransformation'
 
 const storageKey = 'screens'
 
 export async function getItemList(): Promise<Array<ScreenItem>> {
   await fakeNetwork()
-  const list: Array<ScreenItem> = (await localforage.getItem(storageKey)) || []
+  const list: Array<ScreenItem> = (await localforage.getItem(storageKey)) ?? []
 
   return list
 }
@@ -18,6 +18,15 @@ export async function createItem(data: ScreenInput): Promise<ScreenItem> {
   list.unshift(item)
   await set(list)
   return item
+}
+
+export async function createItemList(data: ScreenInputList): Promise<Array<ScreenItem>> {
+  await fakeNetwork()
+  const items = data.map((item) => transformScreenInput(item))
+  const list: Array<ScreenItem> = await getItemList()
+  const newlist = list.concat(items)
+  await set(newlist)
+  return newlist
 }
 
 export async function getItem(id?: string): Promise<ScreenItem | undefined> {
